{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 24,
  "lineage": "ed185847-c509-2aeb-e3cb-2108a4c6446f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_postgres_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-23T06:43:09.195-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tangential-map-491113-b4/global/firewalls/allow-postgres-internal",
            "log_config": [],
            "name": "allow-postgres-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/tangential-map-491113-b4/global/networks/ymatch-network",
            "priority": 1000,
            "project": "tangential-map-491113-b4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tangential-map-491113-b4/global/firewalls/allow-postgres-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-postgres"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-23T06:43:08.999-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tangential-map-491113-b4/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/tangential-map-491113-b4/global/networks/ymatch-network",
            "priority": 1000,
            "project": "tangential-map-491113-b4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tangential-map-491113-b4/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260310",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tangential-map-491113-b4/zones/us-west1-b/disks/ymatch-db-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tangential-map-491113-b4/zones/us-west1-b/instances/ymatch-db-vm",
            "instance_id": "1938620048602889575",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "apdt2nPvfgU=",
            "metadata_startup_script": "#!/bin/bash\nset -e\napt-get update\napt-get install -y ca-certificates curl gnupg\ninstall -m 0755 -d /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg\nchmod a+r /etc/apt/keyrings/docker.gpg\necho \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian $(. /etc/os-release \u0026\u0026 echo \"$VERSION_CODENAME\") stabl [...]
            "name": "ymatch-db-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.109.37.2",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tangential-map-491113-b4/global/networks/ymatch-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tangential-map-491113-b4/regions/us-west1/subnetworks/ymatch-subnet",
                "subnetwork_project": "tangential-map-491113-b4"
              }
            ],
            "project": "tangential-map-491113-b4",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tangential-map-491113-b4/zones/us-west1-b/instances/ymatch-db-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-postgres"
            ],
            "tags_fingerprint": "AV6XHBJgLbk=",
            "zone": "us-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata_startup_script"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/tangential-map-491113-b4/global/networks/ymatch-network",
            "mtu": 0,
            "name": "ymatch-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6341319018605772174",
            "project": "tangential-map-491113-b4",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tangential-map-491113-b4/global/networks/ymatch-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-23T06:43:10.592-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/tangential-map-491113-b4/regions/us-west1/subnetworks/ymatch-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "ymatch-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/tangential-map-491113-b4/global/networks/ymatch-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tangential-map-491113-b4",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tangential-map-491113-b4/regions/us-west1/subnetworks/ymatch-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    }
  ]
}